--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1228,10 +1228,7 @@
               </tr>
               <!-- 中國簽證資料上傳 Visa Upload -->
               <tr style="display: none" id="media-section-row3">
-                <td
-                  colspan="2"
-                  style="border-top: none; width: 55vw; border-right: none"
-                >
+                <td style="border-top: none; width: 55vw; border-right: none">
                   <div id="visa-upload" style="background-color: mintcream">
                     <span class="label">簽證申請 Visa Support</span><br />
                     由於規定，目前中國地區人士來台需由在台單位協助申辦。
@@ -1245,7 +1242,7 @@
                     <a
                       href="https://forms.gle/hVu54wUfqqUMRxfG8"
                       target="_blank"
-                      >下載表單</a
+                      >填寫表單</a
                     >
                   </div>
                 </td>
