fix: add booth number description to dynamic language section

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -912,6 +912,7 @@
                       >N/A
                     </span>
                     <span
+                      id="booth-number-desc"
                       style="
                         font-size: 1rem;
                         color: darkgray;
