fix: comment out booth appearance display logic in dashboard scripts

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1484,18 +1484,11 @@
                   >
                 </td>
                 <td style="border-top: none; width: 55vw">
-                  <span class="label">展場地圖 Venue Map</span><br />
-                  <a href="https://your-shopline-link.com" target="_blank"
-                    >在主網站查看</a
-                  >
-                </td>
-              </tr>
-              <tr style="display: none" id="media-section-row6">
-                <td style="border-top: none; width: 55vw">
                   <span class="label">攤位外觀 Booth Appearance</span><br />
                   10月公布
                 </td>
               </tr>
+              <!-- <tr style="display: none" id="media-section-row6"></tr> -->
 
               <tr>
                 <td style="border-top: none; border-right: 2px solid black">
