fix: adjust booth number column width and add booth map column in dashboard

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -903,7 +903,7 @@
             <table width="100%">
               <tr>
                 <!-- 攤商編號 -->
-                <td style="border-right: 2px solid black">
+                <td style="border-right: 2px solid black; width: 80%">
                   <span class="label">攤商編號 Booth Number</span><br />
                   <div style="vertical-align: middle; font-size: 2.7rem">
                     <span
@@ -922,6 +922,19 @@
                       >攤位編號與攤位地圖將於報到當天（11/20）公布，屆時請留意公告。
                     </span>
                   </div>
+                </td>
+                <td
+                  style="
+                    width: 20%;
+                    border-top: 0.5px solid pink;
+                    border-left: none;
+                    border-right: none;
+                    border-bottom: none;
+                  "
+                >
+                  <span class="label">攤位地圖 Booth Map</span><br /><span
+                    >N/A</span
+                  >
                 </td>
               </tr>
               <tr>
