--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -900,43 +900,55 @@
         <!-- Right Column -->
         <td class="right">
           <div class="scroll-inner">
-            <table width="100%">
+            <table style="width: 100%; table-layout: auto">
+              <!-- 攤商編號 -->
               <tr>
-                <!-- 攤商編號 -->
-                <td style="border-right: 2px solid black; width: 80%">
-                  <span class="label">攤商編號 Booth Number</span><br />
-                  <div style="vertical-align: middle; font-size: 2.7rem">
-                    <span
-                      style="font-size: 2rem; color: black; line-height: 1.5rem"
-                      id="Booth-number"
-                      >N/A
-                    </span>
-                    <span
-                      id="booth-number-desc"
-                      style="
-                        font-size: 1rem;
-                        color: darkgray;
-                        line-height: 1rem;
-                        display: block;
-                      "
-                      >攤位編號與攤位地圖將於報到當天（11/20）公布，屆時請留意公告。
-                    </span>
-                  </div>
-                </td>
-                <td
-                  style="
-                    width: 20%;
-                    border-top: 0.5px solid pink;
-                    border-left: none;
-                    border-right: none;
-                    border-bottom: none;
-                  "
-                >
-                  <span class="label">攤位地圖 Booth Map</span><br /><span
-                    >N/A</span
-                  >
+                <td colspan="3" style="padding: 0; border: none">
+                  <table style="width: 100%; table-layout: auto">
+                    <tr style="padding: 0; border: none">
+                      <td style="width: 80%; border-right: 1px dashed black">
+                        <span class="label">攤商編號 Booth Number</span><br />
+                        <div style="vertical-align: middle; font-size: 2.7rem">
+                          <span
+                            style="
+                              font-size: 2rem;
+                              color: black;
+                              line-height: 1.5rem;
+                            "
+                            id="Booth-number"
+                            >N/A
+                          </span>
+                          <span
+                            id="booth-number-desc"
+                            style="
+                              font-size: 1rem;
+                              color: darkgray;
+                              line-height: 1rem;
+                              display: block;
+                              border-right: 1px dashed black;
+                            "
+                            >攤位編號與攤位地圖將於報到當天（11/20）公布，屆時請留意公告。
+                          </span>
+                        </div>
+                      </td>
+                      <td
+                        style="
+                          width: 20%;
+                          border-top: 1px solid black;
+                          border-left: none;
+                          border-right: 1px solid black;
+                        "
+                      >
+                        <span class="label">攤位地圖 Booth Map</span><br /><span
+                          >N/A</span
+                        >
+                      </td>
+                    </tr>
+                  </table>
                 </td>
               </tr>
+
+              <!-- 資格勾勾區 -->
               <tr>
                 <td colspan="3" style="padding: 0; border: none">
                   <table style="width: 100%; table-layout: auto">
