--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -906,7 +906,13 @@
                 <td colspan="3" style="padding: 0; border: none">
                   <table style="width: 100%; table-layout: auto">
                     <tr style="padding: 0; border: none">
-                      <td style="width: 80%; border-right: 1px dashed black">
+                      <td
+                        style="
+                          width: 80%;
+                          border-right: 1px dashed black;
+                          border-bottom: 1px solid aliceblue;
+                        "
+                      >
                         <span class="label">攤商編號 Booth Number</span><br />
                         <div style="vertical-align: middle; font-size: 2.7rem">
                           <span
@@ -933,6 +939,7 @@
                       </td>
                       <td
                         style="
+                          border-bottom: 1px solid aliceblue;
                           width: 20%;
                           border-top: 1px solid black;
                           border-left: none;
