fix: add upload status display for catalog, marketing, and declaration uploads

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1104,6 +1104,10 @@
                               >
                                 Upload
                               </button>
+                              <span
+                                id="declaration-upload-status"
+                                style="margin-left: 8px; color: green"
+                              ></span>
                             </td>
                           </tr>
                         </table>
@@ -1347,6 +1351,10 @@
                   >
                     上傳 Upload
                   </button>
+                  <span
+                    id="marketing-upload-status"
+                    style="margin-left: 8px; color: green"
+                  ></span>
                 </td>
               </tr>
 
@@ -1460,6 +1468,10 @@
                     >
                       上傳 Upload
                     </button>
+                    <span
+                      id="catalog-upload-status"
+                      style="margin-left: 8px; color: green"
+                    ></span>
                   </div>
                 </td>
               </tr>
