fix: remove unnecessary margin from upload status display for cleaner layout

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1113,7 +1113,7 @@
                               ><br />
                               <span
                                 id="declaration-upload-status"
-                                style="margin-left: 8px; color: green"
+                                style="color: green"
                               ></span>
                             </td>
                           </tr>
@@ -1360,7 +1360,7 @@
                   ><br />
                   <span
                     id="marketing-upload-status"
-                    style="margin-left: 8px; color: green"
+                    style="color: green"
                   ></span>
                 </td>
               </tr>
@@ -1477,7 +1477,7 @@
                     ><br />
                     <span
                       id="catalog-upload-status"
-                      style="margin-left: 8px; color: green"
+                      style="color: green"
                     ></span>
                   </div>
                 </td>
