fix: add display logic for live event schedule and registration status rows

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -156,7 +156,7 @@
                 </td>
               </tr>
               <!-- 現場活動reminder -->
-              <tr>
+              <tr id="live-event-schedule-row" style="display: none">
                 <td colspan="2" style="position: relative">
                   <span class="label"
                     >現場活動場次資訊 Program Sessions Reminder</span
@@ -902,7 +902,7 @@
           <div class="scroll-inner">
             <table style="width: 100%; table-layout: auto">
               <!-- 攤商編號 -->
-              <tr>
+              <tr id="booth-number-row" style="display: none">
                 <td colspan="3" style="padding: 0; border: none">
                   <table style="width: 100%; table-layout: auto">
                     <tr style="padding: 0; border: none">
@@ -955,7 +955,7 @@
               </tr>
 
               <!-- 資格勾勾區 -->
-              <tr>
+              <tr id="registration-status-row" display="none;">
                 <td colspan="3" style="padding: 0; border: none">
                   <table style="width: 100%; table-layout: auto">
                     <tr style="padding: 0; border: none">
