fix: implement discount code display and copy functionality

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1537,15 +1537,7 @@
                     style="margin-top: 0.5em; font-size: 1rem"
                     id="familyticket-desc"
                   ></div>
-                  <span id="discountcode">!89SJ89</span>
-                  <button
-                    class="copy-btn"
-                    onclick="copyToClipboard('discountcode')"
-                    title="Copy Discount Code"
-                    style="margin-left: 5px"
-                  >
-                    📋
-                  </button>
+                  <span id="ticket-discountcode"></span>
                   <br /><br />
                   <a
                     href="https://your-shopline-link.com"
