fix: add live event schedule reminder section to dashboard

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -155,6 +155,31 @@
                   </div>
                 </td>
               </tr>
+              <!-- 現場活動reminder -->
+              <tr id="live-event-schedule-row" style="display: none">
+                <td colspan="2" style="position: relative; width: 44vw">
+                  <span class="label"
+                    >現場活動場次資訊 Program Sessions Reminder</span
+                  ><br />
+                  <div
+                    style="margin-top: 0.5em; font-size: 1rem"
+                    id="live-event-schedule-desc"
+                  >
+                    我們將會在此列出你所報名現場提供的活動服務場次資訊，相關活動內容已寄到你的信箱，不要忘了提早15分鐘到相對應的區域報到喔。
+                  </div>
+                  <hr
+                    style="
+                      border-top: 1px dashed black;
+                      margin: 6px 0;
+                      border-bottom: none;
+                    "
+                  />
+                  <span
+                    style="font-size: 1rem"
+                    id="live-event-schedule-reminder"
+                  ></span>
+                </td>
+              </tr>
               <tr>
                 <!-- 左邊：攤種區塊 -->
                 <td
@@ -236,25 +261,6 @@
                       </td>
                     </tr>
                   </table>
-                </td>
-              </tr>
-              <!-- 現場活動reminder -->
-              <tr id="live-event-schedule-row" style="display: none">
-                <td colspan="2" style="position: relative; width: 44vw">
-                  <span class="label"
-                    >現場活動場次資訊 Program Sessions Reminder</span
-                  ><br />
-                  <div
-                    style="margin-top: 0.5em; font-size: 1rem"
-                    id="live-event-schedule-desc"
-                  >
-                    我們將會在此列出你所報名現場提供的活動服務場次資訊，相關活動內容已寄到你的信箱，不要忘了提早15分鐘到相對應的區域報到喔。
-                  </div>
-                  <br />
-                  <div
-                    style="font-size: 1rem"
-                    id="live-event-schedule-reminder"
-                  ></div>
                 </td>
               </tr>
 
