fix: add booth map ID and update visa upload variable for clarity

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -952,6 +952,7 @@
                         "
                       >
                         <span class="label">攤位地圖 Booth Map</span><br /><span
+                          id="booth-map"
                           >N/A</span
                         >
                       </td>
