fix: refactor loading logic and remove redundant code from dashboard scripts

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -908,7 +908,10 @@
           <div class="scroll-inner">
             <table style="width: 100%; table-layout: auto">
               <!-- 攤商編號 -->
-              <tr id="booth-number-row" style="display: none">
+              <tr
+                id="booth-number-row"
+                style="display: none; width: 100%; table-layout: auto"
+              >
                 <td colspan="3" style="padding: 0; border: none">
                   <table style="width: 100%; table-layout: auto">
                     <tr style="padding: 0; border: none">
@@ -953,6 +956,11 @@
                       >
                         <span class="label">攤位地圖 Booth Map</span><br /><span
                           id="booth-map-desc"
+                          style="
+                            font-size: 1.5rem;
+                            color: black;
+                            line-height: 2rem;
+                          "
                           >N/A</span
                         >
                       </td>
