fix: adjust table column widths and loading mask timing for improved layout and performance

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -917,7 +917,7 @@
                     <tr style="padding: 0; border: none">
                       <td
                         style="
-                          width: 80%;
+                          width: 40vw;
                           border-right: 1px dashed black;
                           border-bottom: 1px solid aliceblue;
                         "
@@ -940,6 +940,7 @@
                               color: darkgray;
                               line-height: 1rem;
                               display: block;
+                              margin-top: 0.5rem;
                             "
                             >攤位編號與攤位地圖將於報到當天（11/20）公布，屆時請留意公告。
                           </span>
@@ -948,7 +949,8 @@
                       <td
                         style="
                           border-bottom: 1px solid aliceblue;
-                          width: 20%;
+                          width: 15vw;
+
                           border-top: 1px solid black;
                           border-left: none;
                           border-right: 1px solid black;
