--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1375,21 +1375,25 @@
                     >行銷素材下載＆上傳 ​Download & Upload Marketing
                     Materials</span
                   >
-                  <div id="material-download-desc" style="margin-top: 0.5em">
-                    <strong>下載視覺素材包：</strong><br />
+                  <div id="material-download-annouce-time">
+                    <strong>下載行銷素材包：</strong><br />
                     若您需要使用草率季官方行銷素材，點此下載檔案。
-                  </div>
-                  <a
-                    id="media-zip-link"
-                    href="https://drive.google.com/drive/folders/18CIdZXZi0wD4fGmh_YGyc-4PYUavMHSn?usp=sharing"
-                    download
-                    >Download</a
-                  ><br /><br />
-                  <div id="material-upload-desc">
-                    <strong>上傳：</strong><br />
-                    請使用素材包內的官方模板（AI檔）製作，並上傳一張符合格式的圖片，我們將安排社群露出。(書攤需有三本書籍圖片上傳）<br />
-                    📌 格式：JPG、RGB、150 ppi、每單位限 1 張，zip包上傳<br />
-                    ⚠️ 未於期限內上傳，將可能無法安排社群曝光。<br />
+                    <div id="material-download-desc" style="margin-top: 0.5em">
+                      <strong>下載視覺素材包：</strong><br />
+                      若您需要使用草率季官方行銷素材，點此下載檔案。
+                    </div>
+                    <a
+                      id="media-zip-link"
+                      href="https://drive.google.com/drive/folders/18CIdZXZi0wD4fGmh_YGyc-4PYUavMHSn?usp=sharing"
+                      download
+                      >Download</a
+                    ><br /><br />
+                    <div id="material-upload-desc">
+                      <strong>上傳：</strong><br />
+                      請使用素材包內的官方模板（AI檔）製作，並上傳一張符合格式的圖片，我們將安排社群露出。(書攤需有三本書籍圖片上傳）<br />
+                      📌 格式：JPG、RGB、150 ppi、每單位限 1 張，zip包上傳<br />
+                      ⚠️ 未於期限內上傳，將可能無法安排社群曝光。<br />
+                    </div>
                   </div>
                 </td>
                 <!-- 行銷素材上傳 -->
@@ -1467,20 +1471,22 @@
               <tr id="media-live-event-section" style="display: none">
                 <td style="border-top: none; width: 55vw; vertical-align: top">
                   <span class="label">現場活動徵集 Program Open Call</span>
-                  <div
-                    style="margin-top: 0.5em; font-size: 1rem"
-                    id="live-event-desc"
-                  >
-                    想與大家更近距離互動？我們開放以下形式的現場活動徵集：短講、表演、工作坊、DJ等。
+                  <div id="live-even-annouce-time">
+                    <div
+                      style="margin-top: 0.5em; font-size: 1rem"
+                      id="live-event-desc"
+                    >
+                      想與大家更近距離互動？我們開放以下形式的現場活動徵集：短講、表演、工作坊、DJ等。
+                    </div>
+                    <br />
+                    <a
+                      href="https://forms.gle/ckXiewW68i1VwKYt6"
+                      target="_blank"
+                      id="live-event-signup-link"
+                    >
+                      報名表單
+                    </a>
                   </div>
-                  <br />
-                  <a
-                    href="https://forms.gle/ckXiewW68i1VwKYt6"
-                    target="_blank"
-                    id="live-event-signup-link"
-                  >
-                    報名表單
-                  </a>
                 </td>
               </tr>
 
@@ -1489,26 +1495,28 @@
                   <span class="label"
                     >草率簿露出上傳 TPABF Catalog Submission</span
                   >
-                  <div
-                    style="margin-top: 0.5em; font-size: 1rem"
-                    id="catalog-desc"
-                  >
-                    單位獲取參展資格即代表可於當年《草率簿 TPABF
-                    Catalog》中露出一面，請使用行銷素材包提供的版型製作，並於期限內完成上傳與左側攤商基本資料修改，逾期視同放棄。<br /><br />
-                    📌 規格：<br />
-                    檔案類型 Format ：PDF（請確認圖片已置入、文字已轉外框）<br />
-                    工作區域 Workspace：140×220mm<br />
-                    四邊出血 Bleed：5mm<br />
-                    色彩 Color Mode: 黑白 B&W<br />
+                  <div id="catalog-accounce-time">
+                    <div
+                      style="margin-top: 0.5em; font-size: 1rem"
+                      id="catalog-desc"
+                    >
+                      單位獲取參展資格即代表可於當年《草率簿 TPABF
+                      Catalog》中露出一面，請使用行銷素材包提供的版型製作，並於期限內完成上傳與左側攤商基本資料修改，逾期視同放棄。<br /><br />
+                      📌 規格：<br />
+                      檔案類型 Format ：PDF（請確認圖片已置入、文字已轉外框）<br />
+                      工作區域 Workspace：140×220mm<br />
+                      四邊出血 Bleed：5mm<br />
+                      色彩 Color Mode: 黑白 B&W<br />
+                    </div>
+                    <br />
+                    <a
+                      href="https://drive.google.com/file/d/1zm8dL5ElUdGKYjGFjN5y4R3Ml5baaEKw/view?usp=drive_link"
+                      target="_blank"
+                      id="catalog-download-link"
+                    >
+                      Download Link
+                    </a>
                   </div>
-                  <br />
-                  <a
-                    href="https://drive.google.com/file/d/1zm8dL5ElUdGKYjGFjN5y4R3Ml5baaEKw/view?usp=drive_link"
-                    target="_blank"
-                    id="catalog-download-link"
-                  >
-                    Download Link
-                  </a>
                 </td>
                 <td
                   colspan="1"
@@ -1552,36 +1560,40 @@
               <tr style="display: none" id="familyticket">
                 <td colspan="2" style="border-top: none; width: 55vw">
                   <span class="label">親友票 Family&Friends Tickets</span><br />
-                  <div
-                    style="margin-top: 0.5em; font-size: 1rem"
-                    id="familyticket-desc"
-                  ></div>
-                  <span id="ticket-discountcode"></span>
-                  <br /><br />
-                  <a
-                    href="https://your-shopline-link.com"
-                    target="_blank"
-                    id="ticket-link"
-                    >購票連結</a
-                  >
+                  <div id="familyticket-annouce-time">
+                    <div
+                      style="margin-top: 0.5em; font-size: 1rem"
+                      id="familyticket-desc"
+                    ></div>
+                    <span id="ticket-discountcode"></span>
+                    <br /><br />
+                    <a
+                      href="https://your-shopline-link.com"
+                      target="_blank"
+                      id="ticket-link"
+                      >購票連結</a
+                    >
+                  </div>
                 </td>
               </tr>
 
               <tr style="display: none" id="manual-boothappearance">
                 <td style="border-top: none; width: 55vw">
                   <span class="label">攤主手冊 Exhibitor Manual</span><br />
-                  <div
-                    style="margin-top: 0.5em; font-size: 1rem"
-                    id="manual-desc"
-                  >
-                    展前將提供完整《攤主手冊》供您下載，內含報到流程、進撤場時間、攤位樣式參考、現場規範與《罰金手冊》等所有參展須知，請務必詳閱並依說明準備。
+                  <div id="manual-annouce-time">
+                    <div
+                      style="margin-top: 0.5em; font-size: 1rem"
+                      id="manual-desc"
+                    >
+                      展前將提供完整《攤主手冊》供您下載，內含報到流程、進撤場時間、攤位樣式參考、現場規範與《罰金手冊》等所有參展須知，請務必詳閱並依說明準備。
+                    </div>
+                    <a
+                      href="https://your-shopline-link.com"
+                      target="_blank"
+                      id="manual-link"
+                      >下載 Download</a
+                    >
                   </div>
-                  <a
-                    href="https://your-shopline-link.com"
-                    target="_blank"
-                    id="manual-link"
-                    >下載 Download</a
-                  >
                 </td>
                 <td style="border-top: none; width: 55vw">
                   <span class="label">攤位外觀 Booth Appearance</span><br />
