fix: update exhibitor manual section in dashboard; improve structure and visibility fix: adjust loading interval for smoother experience; change banner text color to dark grey

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1577,8 +1577,13 @@
                 </td>
               </tr>
 
+              <!-- 親友票 Shopline -->
               <tr style="display: none" id="manual-boothappearance">
-                <td style="border-top: none; width: 55vw">
+                <td
+                  colspan="2"
+                  style="border-top: none; width: 55vw"
+                  id="manual-section"
+                >
                   <span class="label">攤主手冊 Exhibitor Manual</span><br />
 
                   <div
@@ -1594,15 +1599,6 @@
                       id="manual-link"
                       >下載 Download</a
                     >
-                  </div>
-                </td>
-                <td style="border-top: none; width: 55vw">
-                  <span class="label">攤位外觀 Booth Appearance</span><br />
-                  <div
-                    style="margin-top: 0.5em; font-size: 1rem"
-                    id="boothappearance-desc"
-                  >
-                    10月公布
                   </div>
                 </td>
               </tr>
