--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1404,32 +1404,33 @@
                     width: 20%;
                     border-left: 1px dashed black;
                   "
-                  id="material-upload-btn"
                 >
-                  <input
-                    type="file"
-                    id="marketing-file"
-                    accept=".jpg,.jpeg"
-                    style="max-width: 198px"
-                  /><br />
-                  <button
-                    style="
-                      padding: 0.3em 1.2em;
-                      background: #000;
-                      color: #fff;
-                      border: none;
-                      border-radius: 3px;
-                      cursor: pointer;
-                    "
-                    type="button"
-                    id="uploadBtnMarketing"
-                  >
-                    上傳 Upload</button
-                  ><br />
-                  <span
-                    id="marketing-upload-status"
-                    style="color: green"
-                  ></span>
+                  <div style="min-width: 198px" id="material-upload-btn">
+                    <input
+                      type="file"
+                      id="marketing-file"
+                      accept=".jpg,.jpeg"
+                      style="max-width: 198px"
+                    /><br />
+                    <button
+                      style="
+                        padding: 0.3em 1.2em;
+                        background: #000;
+                        color: #fff;
+                        border: none;
+                        border-radius: 3px;
+                        cursor: pointer;
+                      "
+                      type="button"
+                      id="uploadBtnMarketing"
+                    >
+                      上傳 Upload</button
+                    ><br />
+                    <span
+                      id="marketing-upload-status"
+                      style="color: green"
+                    ></span>
+                  </div>
                 </td>
               </tr>
 
@@ -1525,9 +1526,8 @@
                     width: 20%;
                     border-left: 1px dashed black;
                   "
-                  id="catalog-upload-btn"
                 >
-                  <div>
+                  <div id="catalog-upload-btn" style="min-width: 198px">
                     <input
                       type="file"
                       id="catalog-file"
