fix: remove visa requirement logic; update based at section in dashboard

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -333,28 +333,12 @@
                           >TW</span
                         >
                       </td>
-                      <td
-                        style="
-                          width: 75%;
-
-                          border-top: 0.5px solid pink;
-                          border-left: none;
-                          border-right: none;
-                          border-bottom: none;
-                        "
-                      >
-                        <span class="label">簽證資訊 Visa Information</span
-                        ><br /><span id="visa-requirement">Not Require</span>
+                      <td>
+                        <span class="label">主要創作據點 Based at</span
+                        ><br /><span id="baselocation"></span>
                       </td>
                     </tr>
                   </table>
-                </td>
-              </tr>
-              <tr>
-                <td colspan="2">
-                  <span class="label">主要創作據點 Based at</span><br /><span
-                    id="baselocation"
-                  ></span>
                 </td>
               </tr>
               <tr>
