fix: add extra pass display logic; update agreement and billing sections with overlays

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -242,6 +242,12 @@
                           <li id="equipment-book">
                             – 草率簿 ×1<small> (含露出一面)</small>
                           </li>
+                          <li
+                            id="extrapasstxt"
+                            style="display: none; color: orangered"
+                          >
+                            加購工作證 x1
+                          </li>
                         </ul>
                       </td>
                       <td style="vertical-align: top; border: none; width: 50%">
@@ -1055,7 +1061,10 @@
                         vertical-align: top;
                       "
                     >
-                      <td style="padding: 0; border: none; width: 20%">
+                      <td
+                        style="padding: 0; border: none; width: 20%"
+                        id="agreement-section"
+                      >
                         <table style="width: 100%">
                           <tr>
                             <td
@@ -1091,7 +1100,7 @@
                                 id="declaration-desc"
                               >
                                 請下載並簽署參展同意書，完成後請上傳。 </span
-                              >><br />
+                              ><br />
                               <input
                                 type="file"
                                 id="declaration-file"
