fix: update exhibitor declaration link to Google Drive for easier access

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1084,7 +1084,7 @@
                               style="padding: 0.5em 0em 0em 0.5em; border: none"
                             >
                               <a
-                                href="downloads/TPABF_Exhibitor_Declaration.pdf"
+                                href="https://drive.google.com/drive/folders/1sSZO1vXReBIxDEMiPNR_B0q-eQ711vJ2?usp=drive_link"
                                 target="_blank"
                                 id="declaration-download-link"
                               >
