--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -133,13 +133,13 @@
           <div class="scroll-inner">
             <table width="100%">
               <tr>
-                <td colspan="1" style="position: relative">
+                <td colspan="1" style="position: relative; width: 65%">
                   <span class="label">報名編號 Application Number</span><br />
                   <span style="font-size: 3rem" id="application-number"
                     >25-LB001</span
                   >
                 </td>
-                <td style="width: 30%">
+                <td style="width: 35%">
                   <span class="label">錄取結果 Application Result</span><br />
                   <div style="vertical-align: middle; font-size: 2.7rem">
                     <span
