fix: add id attribute to material upload section for better accessibility

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1335,6 +1335,7 @@
                     width: 20%;
                     border-left: 1px dashed black;
                   "
+                  id="material-upload-section"
                 >
                   <div style="min-width: 198px" id="material-upload-btn">
                     <input
