feat: add interactive grass mask with progress display for mobile

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -35,6 +35,11 @@
     <script src="js/edit-profile.js"></script>
   </head>
   <body>
+    <!-- 草地遮罩 -->
+    <div id="grass-mask" style="display: none">
+      <canvas id="grass-canvas"></canvas>
+      <div id="grass-progress"></div>
+    </div>
     <div id="loading-mask" style="display: flex">
       <div class="loading-grid"></div>
       <div class="loading-percent" id="loading-percent">0%</div>
