fix: remove duplicate grass mask section in dashboard HTML

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -2258,6 +2258,11 @@
         </td>
       </tr>
     </table>
+    <!-- 草地遮罩 -->
+    <div id="grass-mask" style="display: none">
+      <canvas id="grass-canvas"></canvas>
+      <div id="grass-progress"></div>
+    </div>
     <script src="js/dashboardupload/upload_dashboard.js"></script>
     <script src="js/dashboard-body.js"></script>
     <script src="js/oxox.js"></script>
